--- a/loginregpage/static/style.css
+++ b/loginregpage/static/style.css
@@ -1,22 +1,28 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .header{
-    padding: 5px 120px;
+    padding: 25px 120px;
     width: 150px;
     height: 70px;
-    background-color: #236B8E; 
+    background-color: #088442; 
+    border-radius: 10px;
+    
 }
 
 .border{
     padding: 80px 50px;
     width: 400px;
     height: 450px;
-    border: 1px solid #236B8E;
+    border: 1px solid #088442;
     border-radius: 0px;
-    background-color: #9AC0CD;
+    background-color: #0df28b;
 }
 
 .btn {
     padding: 10px 40px;
-    background-color: #236B8E; 
+    background-color: #088442; 
     color: #FFFFFF;
     font-style: oblique;
     font-weight: bold;
@@ -24,7 +30,7 @@
 }
 .textbox{
     padding: 10px 40px;
-    background-color: #236B8E; 
+    background-color: #088442; 
     text-color: #FFFFFF;
     border-radius: 10px;
 }
